--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,8 @@
         {% else %}
           {% assign url = link.url | relative_url %}
         {% endif %}
-        <a class="page-link" href="{{ url }}">{{ link.title }}</a>
+        {% assign target = link.target | "_self" %}
+        <a class="page-link" href="{{ url }}" target="{{ target }}">{{ link.title }}</a>
       {% endfor %}
     </nav>
 
