--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="home" oncontextmenu="return false" onselectstart="return false">
+<div class="home">
 
   <h1 class="page-heading">{{ page.title | escape }}</h1>
 
